--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,24 @@
 	<link rel='manifest' href='manifest.json' crossorigin='use-credentials'>
 	<link rel='icon' type='image/png' href='favicon.png'>
 
+	<link rel="apple-touch-icon" sizes="57x57" href="dark_on_light/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="dark_on_light/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="dark_on_light/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="dark_on_light/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="dark_on_light/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="dark_on_light/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="dark_on_light/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="dark_on_light/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="dark_on_light/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="dark_on_light/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="dark_on_light/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="dark_on_light/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="dark_on_light/favicon-16x16.png">
+	<link rel="manifest" href="dark_on_light/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="dark_on_light/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
